[3.0.0]
- Refactored the Style so that most of the `float` values (`radius` and the likes) have become class-attributes instead.
- Many more constructors available. Basic `float` properties (`radius` and the likes) are now integrated in the constructors.
- `PieMenuSuggestedClickListener` renamed to `PieMenuClickListener` due to default integration. A setter is provided to change this `ClickListener` to a custom one.
- Widget now starts with its visibility set to `true` (it used to be `false`): this is to remain closer to scene2d's expected behavior.
- Changed the Actor-sizing algorithm (and thus fixed it for low `innerRadius` values).
- Integrated the propagation of the alpha from parent to children. Use the `setGlobalAlphaMultiplier(float)` method to do so.
- Fix for Widgets contained within a Table.
- Fix of the PieMenuStyle Colors-duplication.
- The `PieMenuSuggestedClickListener` now triggers a highlight on `touchDown` rather than waiting for the mouse to move after the initial click.
- HighlightChangeListener now extends EventListener. Removed the associated getter and setter: now `addListener()` should be used for that too.
- Style's `Circumference` values now include the `innerRadius` value.
- New API methods to allow more customization: `getActorDistanceFromCenter`, `getEstimatedRadiusAt`  and `adjustActorSize` can be changed to be whatever you want.

[2.2.0]
- Animated versions of the implementations are now available!

[2.1.0]
- Added a `defaultIndex` flag as a fallback value when an invalid index is being selected.
- Minor fix on the `PieMenu`'s `hit` method.

[2.0.0]
- The default of `infiniteSelectionRange` is now `false`.
- Removed the PieMenu.SuggestedClickListener inner class and made it its own class: `PieMenuSuggestedClickListener`.
- Removed the `manualVisibility` flag: it wasn't consistent enough and forced users to learn or guess about some internal workings.